--- a/src/css/config.css
+++ b/src/css/config.css
@@ -29,3 +29,18 @@
 body {
   margin: 0px;
 }
+
+/* Configuracion barra de scroll */
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+html {
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
