--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,22 @@
 .main-container {
     display: flex;
+    position: relative;
     justify-content: space-between;
+    max-width: 1660px;
+    margin: auto;
     height: 100dvh;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-family: 'Inter', sans-serif;
 }
 
 /* Estilos para el contenedor del login */
 
 .login-container {
-    display: grid;
-    justify-items: start;
+    display: flex;
     padding-left: 6.3rem;
     width: 60%;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .logo-container {
@@ -249,10 +253,17 @@
     }
 
     .information-container h2 {
+        text-align: center;
         font-size: 2.5rem;
     }
 
+    .information-text-container {
+        justify-content: center;
+        display: grid;
+    }
+
     [class*="log-inf"] {
+        font-size: 1.2rem;
         width: 33rem
     }
 }
@@ -264,7 +275,7 @@
 
     .login-container {
         width: 100%;
-        padding: 1.3rem;
+        padding: 4rem 1.3rem 1.3rem 1.3rem;
         justify-items: center;
         align-items: center;
     }
@@ -280,4 +291,55 @@
     .login-header h2 {
         font-size: 2.9rem;
     }
+}
+
+
+/* Estilos del botón desplegable */
+.languageBtn {
+    font-weight: 700;
+    display: flex;
+    gap: 1rem;
+    background-color: transparent;
+    color: #15242F;
+    font-size: 1.4rem;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-language {
+    position: absolute;
+    right: 3%;
+    display: inline-block;
+    z-index: 1000;
+    top: 2%;
+}
+
+.dropdown-content {
+    display: none;
+    border-radius: 8px;
+    position: absolute;
+    top: 2.5rem;
+    background-color: #fff;
+    width: 11.2rem;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 1.2rem 0rem;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 0.6rem 1.6rem;
+    font-size: 12px;
+    display: flex;
+    text-decoration: none;
+    font-weight: 500;
+    gap: 1rem;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.show {
+    display: block;
 }
